--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-vendor
-.idea
-composer.lock
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/.idea
+/public/fonts
+/public/css
+/public/js
+/public/mix-manifest.json
