--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "mediazz/storage",
     "type": "library",
-    "version": "0.2.7",
+    "version": "0.2.8",
     "description": "Use the Laravel Filesystem in an encapsulated way",
     "keywords": [
         "storage",
@@ -21,7 +21,7 @@
     "minimum-stability": "dev",
     "bin": [],
     "require": {
-        "php": "^7.1.8 || ^8.0",
+        "php": "^8.3",
         "ext-json": "*"
     },
     "require-dev": {
